Change email address, add style to prevent its wrapping

--- a/cookie-crafter-frontend/src/components/footer.css
+++ b/cookie-crafter-frontend/src/components/footer.css
@@ -52,6 +52,10 @@ footer .about-button:hover {
   height: 39%;
 }
 
+.nowrap {
+  white-space: nowrap;
+}
+
 @media screen and (max-width: 37.5rem) {
   footer {
     flex-direction: column;
